<resources>
    <string name="app_name">ShoppingList</string>
    <string name="add_item">Add Item</string>
    <string name="cheese">Cheese:</string>
    <string name="rice">Rice:</string>
    <string name="yogurt">Yogurt:</string>
    <string name="crab">Crab:</string>
    <string name="lobster">Lobster:</string>
    <string name="chicken">Chicken:</string>
    <string name="pepperoni">Pepperoni:</string>
    <string name="pineapple">Pineapple:</string>
    <string name="orange">Orange:</string>
    <string name="broccoli">Broccoli:</string>
</resources>
