<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemsList">

    <ImageButton
        android:id="@+id/imageYogurt"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePepperoni"
        app:srcCompat="@drawable/yogurt"
        android:contentDescription="@string/yogurt"
        android:onClick="returnReply"/>

    <ImageButton
        android:id="@+id/imageCrab"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/imageLobster"
        app:layout_constraintStart_toEndOf="@+id/imageYogurt"
        app:layout_constraintTop_toBottomOf="@+id/imagePineapple"
        app:srcCompat="@drawable/crab"
        android:contentDescription="@string/crab"
        android:onClick="returnReply"/>

    <ImageButton
        android:id="@+id/imageLobster"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.996"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageOrange"
        app:srcCompat="@drawable/lobster"
        android:contentDescription="@string/lobster"
        android:onClick="returnReply"/>

    <ImageButton
        android:id="@+id/imgBtnCheese"
        android:layout_width="98dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cheese"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:srcCompat="@drawable/cheese"
        android:onClick="returnReply"/>

    <ImageButton
        android:id="@+id/imgBtnChicken"
        android:layout_width="98dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/chicken"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:srcCompat="@drawable/chicken"
        android:onClick="returnReply"/>

    <ImageButton
        android:id="@+id/imgBtnRice"
        android:layout_width="98dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/rice"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgBtnChicken"
        app:layout_constraintStart_toEndOf="@+id/imgBtnCheese"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028"
        app:srcCompat="@drawable/rice"
        android:onClick="returnReply"/>

    <ImageButton
        android:id="@+id/imagePepperoni"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.029"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnCheese"
        app:srcCompat="@drawable/pepperoni"
        android:contentDescription="@string/pepperoni"
        android:onClick="returnReply"/>

    <ImageButton
        android:id="@+id/imagePineapple"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/imageOrange"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toEndOf="@+id/imagePepperoni"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnRice"
        app:srcCompat="@drawable/pineapple"
        android:contentDescription="@string/pineapple"
        android:onClick="returnReply"/>

    <ImageButton
        android:id="@+id/imageOrange"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBtnChicken"
        app:srcCompat="@drawable/orange"
        android:contentDescription="@string/orange"
        android:onClick="returnReply"/>

    <ImageButton
        android:id="@+id/imageBroccoli"
        android:layout_width="97dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.702"
        app:srcCompat="@drawable/broccoli"
        android:contentDescription="@string/broccoli"
        android:onClick="returnReply"/>

</android.support.constraint.ConstraintLayout>